@@ -2,6 +2,12 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Tue Feb  1 22:19:01 NOVT 2000
+max:
+* added getEchoArea()
+* getArea() returns echo & local areas
+
+----- cvs ci ------
 Sun Jan 30 17:06:45 NOVT 2000
 max:
 * added token areafixOrigin
